--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,17 @@ jobs:
         run: |
           forge --version
 
+      - name: Show Foundry config + remappings
+        run: |
+          echo "== foundry.toml =="
+          cat foundry.toml || true
+          echo "== forge config (effective) =="
+          forge config
+          echo "== forge remappings (effective) =="
+          forge remappings || true
+          echo "== lib tree =="
+          ls -la lib || true    
+
       - name: Run Forge fmt
         run: |
           forge fmt --check
