-add generate dump state json test in github action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,7 @@ jobs:
         env:
           RPC: http://127.0.0.1:8545
           # Default first Anvil dev key (same one you used locally)
-          PRIVATE_KEY: 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80
+          PRIVATE_KEY: "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
         run: |
           forge script script/DeployDSPool.s.sol:DeployDSPool \
             --rpc-url "$RPC" --broadcast --private-key "$PRIVATE_KEY" -vvv
